fixed the alignment issue in the image carousel

--- a/carousel-style.css
+++ b/carousel-style.css
@@ -42,8 +42,10 @@ aspect ratio is maintained and position is set to center it*/
 .slide > img,
 .slide > video {
     display: block;
-    max-width: 100%;
-    max-height: 100%; 
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh; 
     object-fit: contain;
     object-position: center;
 }
